test/corpus/basics.txt
==================
Empty module
==================

---

(source_file)

==================
Function
==================

pub fn identity(x: u32) -> u32 { x }

---

(source_file
  (function_definition
    visibility: (visibility_modifier)
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (builtin_type)))
    return_type: (builtin_type)
    body: (block
      result: (path_expression
        (identifier)))))
