test/corpus/control_flow.txt
==================
If and const if
==================

fn choose<N: u32>(x: u32) -> u32 {
  if x == u32:0 { u32:1 } else if x == u32:1 { u32:2 } else { u32:3 }
}

fn choose_const<N: u32>() -> u32 {
  const if N == u32:0 { u32:1 } else { u32:2 }
}

---

(source_file
  (function_definition
    name: (identifier)
    parametrics: (parametric_bindings
      (parametric_binding
        name: (identifier)
        type: (builtin_type)))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (builtin_type)))
    return_type: (builtin_type)
    body: (block
      result: (if_expression
        condition: (binary_expression
          left: (path_expression
            (identifier))
          right: (typed_expression
            type: (builtin_type)
            value: (integer_literal)))
        consequence: (block
          result: (typed_expression
            type: (builtin_type)
            value: (integer_literal)))
        alternative: (if_expression
          condition: (binary_expression
            left: (path_expression
              (identifier))
            right: (typed_expression
              type: (builtin_type)
              value: (integer_literal)))
          consequence: (block
            result: (typed_expression
              type: (builtin_type)
              value: (integer_literal)))
          alternative: (block
            result: (typed_expression
              type: (builtin_type)
              value: (integer_literal)))))))
  (function_definition
    name: (identifier)
    parametrics: (parametric_bindings
      (parametric_binding
        name: (identifier)
        type: (builtin_type)))
    parameters: (parameter_list)
    return_type: (builtin_type)
    body: (block
      result: (if_expression
        condition: (binary_expression
          left: (path_expression
            (identifier))
          right: (typed_expression
            type: (builtin_type)
            value: (integer_literal)))
        consequence: (block
          result: (typed_expression
            type: (builtin_type)
            value: (integer_literal)))
        alternative: (block
          result: (typed_expression
            type: (builtin_type)
            value: (integer_literal)))))))

==================
Match patterns, alternatives, ranges, and rest
==================

fn classify(x: u8, pair: (u8, u8)) -> u8 {
  let (_, y) = pair;
  match x {
    u8:0 | u8:1 => y,
    u8:2..=u8:7 => u8:2,
    _ => u8:3,
  }
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (builtin_type))
      (parameter
        name: (identifier)
        type: (tuple_type
          (builtin_type)
          (builtin_type))))
    return_type: (builtin_type)
    body: (block
      (let_statement
        pattern: (pattern
          (tuple_pattern
            (pattern
              (identifier))
            (pattern
              (identifier))))
        value: (path_expression
          (identifier)))
      result: (match_expression
        value: (path_expression
          (identifier))
        (match_arm
          pattern: (pattern
            (literal_pattern
              (typed_expression
                type: (builtin_type)
                value: (integer_literal))))
          alternative_pattern: (pattern
            (literal_pattern
              (typed_expression
                type: (builtin_type)
                value: (integer_literal))))
          value: (path_expression
            (identifier)))
        (match_arm
          pattern: (pattern
            (range_pattern
              start: (literal_pattern
                (typed_expression
                  type: (builtin_type)
                  value: (integer_literal)))
              end: (literal_pattern
                (typed_expression
                  type: (builtin_type)
                  value: (integer_literal)))))
          value: (typed_expression
            type: (builtin_type)
            value: (integer_literal)))
        (match_arm
          pattern: (pattern
            (identifier))
          value: (typed_expression
            type: (builtin_type)
            value: (integer_literal)))))))

==================
For and unroll-for expressions
==================

fn loops<N: u32>(xs: u32[N]) -> u32 {
  let sum = for (i, acc): (u32, u32) in u32:0..N {
    acc + xs[i]
  } (u32:0);
  unroll_for! (i, acc) in u32:0..N { acc + xs[i] } (sum)
}

---

(source_file
  (function_definition
    name: (identifier)
    parametrics: (parametric_bindings
      (parametric_binding
        name: (identifier)
        type: (builtin_type)))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (array_type
          element: (builtin_type)
          dimension: (array_dimension
            size: (path_expression
              (identifier))))))
    return_type: (builtin_type)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier))
        value: (for_expression
          pattern: (pattern
            (tuple_pattern
              (pattern
                (identifier))
              (pattern
                (identifier))))
          type: (tuple_type
            (builtin_type)
            (builtin_type))
          iterable: (binary_expression
            left: (typed_expression
              type: (builtin_type)
              value: (integer_literal))
            right: (path_expression
              (identifier)))
          body: (block
            result: (binary_expression
              left: (path_expression
                (identifier))
              right: (index_expression
                value: (path_expression
                  (identifier))
                index: (path_expression
                  (identifier)))))
          initial_value: (typed_expression
            type: (builtin_type)
            value: (integer_literal))))
      result: (for_expression
        pattern: (pattern
          (tuple_pattern
            (pattern
              (identifier))
            (pattern
              (identifier))))
        iterable: (binary_expression
          left: (typed_expression
            type: (builtin_type)
            value: (integer_literal))
          right: (path_expression
            (identifier)))
        body: (block
          result: (binary_expression
            left: (path_expression
              (identifier))
            right: (index_expression
              value: (path_expression
                (identifier))
              index: (path_expression
                (identifier)))))
        initial_value: (path_expression
          (identifier))))))
