test/corpus/expressions.txt
==================
Literal forms
==================

fn literals() {
  let a = u8:0xff;
  let b = sN[8]:-7;
  let c = '\n';
  let d = "dslx\u{21}";
  let e = [u8:1, u8:2, ...];
  (a, b, c, d, e)
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier))
        value: (typed_expression
          type: (builtin_type)
          value: (integer_literal)))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (typed_expression
          type: (array_type
            element: (builtin_type)
            dimension: (array_dimension
              size: (integer_literal)))
          value: (unary_expression
            (integer_literal))))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (character_literal))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (string_literal))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (array_expression
          (typed_expression
            type: (builtin_type)
            value: (integer_literal))
          (typed_expression
            type: (builtin_type)
            value: (integer_literal))))
      result: (tuple_expression
        (path_expression
          (identifier))
        (path_expression
          (identifier))
        (path_expression
          (identifier))
        (path_expression
          (identifier))
        (path_expression
          (identifier))))))

==================
Operator precedence and casts
==================

fn operators(a: u32, b: u32, c: u32) -> bool {
  !((a + b * c << u32:1) & u32:0xff == u32:0) || (a as u64) >= u64:4
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (builtin_type))
      (parameter
        name: (identifier)
        type: (builtin_type))
      (parameter
        name: (identifier)
        type: (builtin_type)))
    return_type: (builtin_type)
    body: (block
      result: (binary_expression
        left: (unary_expression
          (parenthesized_expression
            (binary_expression
              left: (binary_expression
                left: (parenthesized_expression
                  (binary_expression
                    left: (binary_expression
                      left: (path_expression
                        (identifier))
                      right: (binary_expression
                        left: (path_expression
                          (identifier))
                        right: (path_expression
                          (identifier))))
                    right: (typed_expression
                      type: (builtin_type)
                      value: (integer_literal))))
                right: (typed_expression
                  type: (builtin_type)
                  value: (integer_literal)))
              right: (typed_expression
                type: (builtin_type)
                value: (integer_literal)))))
        right: (binary_expression
          left: (parenthesized_expression
            (cast_expression
              value: (path_expression
                (identifier))
              type: (builtin_type)))
          right: (typed_expression
            type: (builtin_type)
            value: (integer_literal)))))))

==================
Postfix operations and slices
==================

fn postfix(x: u32[4], pair: (u32, u32), s: Point<u32:32>) {
  let a = x[u32:1];
  let b = x[:u32:2];
  let c = x[u32:1:];
  let d = x[u32:1+:u8];
  let e = pair.0;
  let f = s.x;
  (a, b, c, d, e, f)
}

---

(source_file
  (function_definition
    name: (identifier)
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (array_type
          element: (builtin_type)
          dimension: (array_dimension
            size: (integer_literal))))
      (parameter
        name: (identifier)
        type: (tuple_type
          (builtin_type)
          (builtin_type)))
      (parameter
        name: (identifier)
        type: (type_path
          (identifier)
          arguments: (parametric_arguments
            (parametric_argument
              (typed_expression
                type: (builtin_type)
                value: (integer_literal)))))))
    body: (block
      (let_statement
        pattern: (pattern
          (identifier))
        value: (index_expression
          value: (path_expression
            (identifier))
          index: (typed_expression
            type: (builtin_type)
            value: (integer_literal))))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (slice_expression
          value: (path_expression
            (identifier))
          limit: (typed_expression
            type: (builtin_type)
            value: (integer_literal))))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (slice_expression
          value: (path_expression
            (identifier))
          start: (typed_expression
            type: (builtin_type)
            value: (integer_literal))))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (width_slice_expression
          value: (path_expression
            (identifier))
          start: (typed_expression
            type: (builtin_type)
            value: (integer_literal))
          width: (builtin_type)))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (tuple_index_expression
          value: (path_expression
            (identifier))
          index: (integer_literal)))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (field_expression
          value: (path_expression
            (identifier))
          field: (identifier)))
      result: (tuple_expression
        (path_expression
          (identifier))
        (path_expression
          (identifier))
        (path_expression
          (identifier))
        (path_expression
          (identifier))
        (path_expression
          (identifier))
        (path_expression
          (identifier))))))
