test/corpus/functions.txt
==================
Parametric function with a derived default
==================

fn width<N: u32, M: u32 = {N + u32:1}>(x: uN[N]) -> uN[M] {
  x as uN[M]
}

---

(source_file
  (function_definition
    name: (identifier)
    parametrics: (parametric_bindings
      (parametric_binding
        name: (identifier)
        type: (builtin_type))
      (parametric_binding
        name: (identifier)
        type: (builtin_type)
        default: (braced_parametric_argument
          value: (binary_expression
            left: (path_expression
              (identifier))
            right: (typed_expression
              type: (builtin_type)
              value: (integer_literal))))))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (array_type
          element: (builtin_type)
          dimension: (array_dimension
            size: (path_expression
              (identifier))))))
    return_type: (array_type
      element: (builtin_type)
      dimension: (array_dimension
        size: (path_expression
          (identifier))))
    body: (block
      result: (cast_expression
        value: (path_expression
          (identifier))
        type: (array_type
          element: (builtin_type)
          dimension: (array_dimension
            size: (path_expression
              (identifier))))))))

==================
Generic calls, function references, and macros
==================

fn apply<N: u32>(x: uN[N]) -> uN[N] {
  let y = identity<N>(x);
  map(x, identity<N>);
  assert_eq(y, zero!<uN[N]>());
  y
}

---

(source_file
  (function_definition
    name: (identifier)
    parametrics: (parametric_bindings
      (parametric_binding
        name: (identifier)
        type: (builtin_type)))
    parameters: (parameter_list
      (parameter
        name: (identifier)
        type: (array_type
          element: (builtin_type)
          dimension: (array_dimension
            size: (path_expression
              (identifier))))))
    return_type: (array_type
      element: (builtin_type)
      dimension: (array_dimension
        size: (path_expression
          (identifier))))
    body: (block
      (let_statement
        pattern: (pattern
          (identifier))
        value: (call_expression
          function: (function_reference
            function: (path_expression
              (identifier))
            parametrics: (parametric_arguments
              (parametric_argument
                (path_expression
                  (identifier)))))
          arguments: (argument_list
            (path_expression
              (identifier)))))
      (expression_statement
        (call_expression
          function: (path_expression
            (identifier))
          arguments: (argument_list
            (path_expression
              (identifier))
            (function_reference
              function: (path_expression
                (identifier))
              parametrics: (parametric_arguments
                (parametric_argument
                  (path_expression
                    (identifier))))))))
      (expression_statement
        (call_expression
          function: (path_expression
            (identifier))
          arguments: (argument_list
            (path_expression
              (identifier))
            (macro_invocation
              macro: (macro_identifier)
              parametrics: (parametric_arguments
                (parametric_argument
                  (array_type
                    element: (builtin_type)
                    dimension: (array_dimension
                      size: (path_expression
                        (identifier))))))
              arguments: (argument_list)))))
      result: (path_expression
        (identifier)))))

==================
Trait stubs and lambda forms
==================

#![feature(traits)]
trait ToBits {
  fn to_bits(self) -> bits[bit_count<Self>()];
  fn merge(self: Self, rhs: Self) -> Self;
}

fn lambdas() {
  let a = |x: u32| { x + u32:1 };
  let b = || u32:0;
  let c = |x| -> u32 { x };
  ()
}

---

(source_file
  (module_attribute
    (attribute_body
      name: (identifier)
      arguments: (attribute_arguments
        (attribute_argument
          (attribute_value
            (identifier))))))
  (trait_definition
    name: (identifier)
    (trait_member
      (function_definition
        name: (identifier)
        parameters: (parameter_list
          (parameter))
        return_type: (array_type
          element: (builtin_type)
          dimension: (array_dimension
            size: (call_expression
              function: (function_reference
                function: (path_expression
                  (identifier))
                parametrics: (parametric_arguments
                  (parametric_argument
                    (path_expression))))
              arguments: (argument_list))))))
    (trait_member
      (function_definition
        name: (identifier)
        parameters: (parameter_list
          (parameter
            type: (type_path))
          (parameter
            name: (identifier)
            type: (type_path)))
        return_type: (type_path))))
  (function_definition
    name: (identifier)
    parameters: (parameter_list)
    body: (block
      (let_statement
        pattern: (pattern
          (identifier))
        value: (lambda_expression
          (lambda_parameter
            name: (identifier)
            type: (builtin_type))
          body: (block
            result: (binary_expression
              left: (path_expression
                (identifier))
              right: (typed_expression
                type: (builtin_type)
                value: (integer_literal))))))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (lambda_expression
          body: (typed_expression
            type: (builtin_type)
            value: (integer_literal))))
      (let_statement
        pattern: (pattern
          (identifier))
        value: (lambda_expression
          (lambda_parameter
            name: (identifier))
          return_type: (builtin_type)
          body: (block
            result: (path_expression
              (identifier)))))
      result: (tuple_expression))))
